# gg

./: .gitignore  Dockerfile  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: gg-action.yml  gg.yml  m.yml
action/: action.yml
gg/: CMakeLists.txt  const.h  main-win.c  main.c  print_hash.c  sha512.c
m/: init.ps1  init.sh  kick.bat  kick.sh
mn/: Cargo.toml
mn/src/: main.rs
src/: README.md
src/stage1/: stage1.bat  stage1.sh
src/stage2/: stage2.ps1  stage2.sh
src/stage3/: CMakeLists.txt  hash.c  main-win.c  main.c  sha512-fix.diff
src/stage4/: Cargo.toml
src/stage4/src/: barus.rs  bloody_indiana_jones.rs  bloody_maven.rs  checker.rs  cleaner.rs  cli.rs  config.rs  custom_command.rs  deno.rs  executor.rs  gem_utils.rs  github_utils.rs  gradle.rs  http_client.rs  java.rs  main.rs  maven.rs  no_clap.rs  node.rs  openapigenerator.rs  rat.rs  target.rs  tools.rs  updater.rs
src/stage4/src/executors/: bld.rs  caddy.rs  claude.rs  custom_command.rs  deno.rs  flutter.rs  github.rs  go.rs  gradle.rs  gradle_properties.rs  grok.rs  java.rs  java_distributions.rs  jbang.rs  maven.rs  mod.rs  node.rs  openapigenerator.rs  python.rs  rat.rs  ruby.rs
stage0/: init.ps1  init.sh  kick.bat  kick.sh
stage1/: CMakeLists.txt  config.h  hash.c  kick.bat  main-win.c  main.c  stage1.bat  stage1.sh
stage2/: Cargo.toml  stage2.ps1  stage2.sh
stage2/src/: bloody_indiana_jones.rs  main.rs  node.rs  target.rs
stage3/: CMakeLists.txt  Cargo.toml  main-win.c  main.c  sha512.c
stage4/: Cargo.toml  build.rs
stage4/src/: bloody_indiana_jones.rs  cmd_to_executor.rs  custom_command.rs  demite.rs  executor.rs  gradle.rs  java.rs  main.rs  no_clap.rs  node.rs  target.rs  version.rs
