[package]
name = "mn"
version = "0.1.0"
authors = ["Eirik Brandtzæg <eirikb@eirikb.no>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
clap = "3.1.6"
openssl = { version = "=0.10.33", features = ["vendored"] }
