[package]
name = "stage2"
version = "0.1.0"
authors = ["Eirik Brandtzæg <eirikb@eirikb.no>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.20.1", features = ["full"] }
scraper = { version = "0.13.0" }
#clap = "3.2.17"
