[package]
name = "stage4"
version = "0.1.0"
authors = ["Eirik Brandtzæg <eirikb@eirikb.no>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.11", default-features = false, features = ["json", "rustls-tls", "stream", ] }
tokio = { version = "1.20.1", features = ["full"] }
scraper = { version = "0.13.0" }
strum = "0.24"
strum_macros = "0.24"
tar = "0.4.38"
futures = "0.3.24"
futures-io = "0.3.24"
tokio-util = { version = "0.7.4", features = ["compat"] }
async-compression = { version = "0.3.14", features = ["all"] }
zip-extract = "0.1.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"
semver = "1.0.16"
regex = "1.7.0"
package-json = "0.3.0"
#clap = "3.2.17"
