[package]
name = "stage4"
version = "0.1.0"
authors = ["Eirik Brandtzæg <eirikb@eirikb.no>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.11.18", default-features = false, features = ["json", "rustls-tls", "stream", ] }
tokio = { version = "1.29.1", features = ["full"] }
scraper = { version = "0.17.1" }
strum = "0.25.0"
strum_macros = "0.25.1"
tar = "0.4.39"
futures = "0.3.24"
futures-io = "0.3.24"
futures-util = "0.3.25"
tokio-util = { version = "0.7.4", features = ["compat"] }
async-compression = { version = "0.4.1", features = ["all"] }
zip-extract = "0.1.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.103"
semver = "1.0.18"
regex = "1.7.0"
package-json = "0.4.0"
log = "0.4.19"
env_logger = "0.10.0"
indicatif = "0.17.5"
which = "4.4.0"
serde-xml-rs = "0.6.0"
walkdir = "2.3.3"
dialoguer = "0.10.4"
octocrab = "0.28.0"
serde-java-properties = "0.1.0"
