[package]
name = "stage4"
version = "0.1.0"
authors = ["Eirik Brandtzæg <eirikb@eirikb.no>"]
edition = "2018"

[dependencies]
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls", "stream", ] }
tokio = { version = "1.29.1", features = ["full"] }
scraper = { version = "0.23.1" }
tar = "0.4.44"
futures-util = "0.3.25"
async-compression = { version = "0.4.1", features = ["all"] }
zip-extract = "0.4.0"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.103"
serde_yml = "0.0.12"
semver = "1.0.18"
regex = "1.11.1"
package-json = "0.5.0"
log = "0.4.19"
env_logger = "0.11.8"
indicatif = "0.17.5"
which = { version = "7.0.3", features = ["regex"] }
serde-xml-rs = "0.8.0"
glob = "0.3.1"
dialoguer = "0.11.0"
octocrab = { version = "0.44.1", features = ["rustls-webpki-tokio"] }
serde-java-properties = "0.2.0"
sha256 = "1.2.2"
